Version 1.5.0-dev
  * Add support for multiple Exception nodes
  * Add a length key when creating MapArray
  * Add Orfeo Toolbox support for applications as a service
  * Add the otb2zcfg utility to produce zcfg for otb applications
  * Add OTB Application Observer to have progress status updates
  * Fix maxOccurs handling
  * Fix gesture of downloaded inputs when multiple values are given
  * Add detection of generated_file key in outputs to read the file generated by a service

Version 1.4.0
  * Small fix for mimeType of results for CGAL services

Version 1.4.0-rc1
  * Binary support for PHP language
  * ZOO-API for the Java language
  * ZOO-Client Javascript API
  * FastCGI fixes
  * JavaScript ZOO-API enhancements (COOKIE use and Output in generated XML)
  * Add debian files
  * Inputs passed by reference downloaded in parallel
  * Conform behavior for DescribeProcess when the Identifier was not found
  * Add support of maximumMegabytes keywords for ComplexData Inputs
  * Add the optional YAML ZCFG support #4 and the zcfg2yaml converter
  * Return error messages that enable the service provider to quickly identify the root cause of errors due to configuration file syntax (ticket #90)
  * Fix logic in addMapToMap (ticket #91)
  * Enable AllowedValue and multiple Range definitions using default and supported blocks
  * Add the lastest revision number in version.h (available in Python ZOO-API)
  * Add the optional Ruby Language Support to the ZOO-Kernel with an API similar to the Python ZOO-API
  * Small rewrite of Python support
  * Inputs can be requested over https protocol (ticket #86)
  * Add capability to define both percentage of execution and a message (ticket #87). 
  * Add usid in lenv section used to generate an unique identifier based on time and the process identifier.
  * Add gdal_contour service
  * Add dynamic definition of serverAddress from the main section

Version 1.3.0-rc2
  * Fix POST Request issue (ticket #34)