@@ -1,7 +1,9 @@
 Version 1.5.0-dev
+  * Add ZOO-API for the PHP language (with documentation)
+  * Add doxygen comments in source code
   * Add support for multiple Exception nodes
   * Add a length key when creating MapArray
-  * Add Orfeo Toolbox support for applications as a service
+  * Add OTB support for applications as a service
   * Add the otb2zcfg utility to produce zcfg for otb applications
   * Add OTB Application Observer to have progress status updates
   * Fix maxOccurs handling
